# ip-api-client-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md
src/: lib.rs
tests/: batch.rs  empty_config.rs  errors.rs  maximum_config.rs  minimum_config.rs
