[package]
name = "ip-api-client"
version = "0.5.1" # don't forget edit version in README.md
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "The client (based on ip-api.com api) allows you to get information about the IP address"
documentation = "https://docs.rs/ip-api-client"
readme = "README.md"
homepage = "https://github.com/Mixerou/ip-api-client-rs"
repository = "https://github.com/Mixerou/ip-api-client-rs"
license = "MIT"
keywords = ["ip", "api"]
categories = ["api-bindings"]

[dependencies]
hyper = { version = "0.14.32", features = ["client", "http1", "runtime"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"], default-features = false }
